--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
+    "mongodb": "^6.3.0",
     "nodemon": "^3.0.3"
   }
 }
