--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.2.1",
     "nodemon": "^3.0.3"
   }
 }
